[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arena-md"
version = "0.1.0"
description = "The crowdsourced gladiator arena for benchmarking agent skills"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Avasis AI", email = "contact@avasis.ai" }
]
maintainers = [
    { name = "Avasis AI", email = "contact@avasis.ai" }
]
keywords = [
    "arena",
    "benchmark",
    "agent",
    "skill",
    "leaderboard",
    "competitive",
    "evaluation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "sqlalchemy>=2.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/avasis-ai/arena-md"
Documentation = "https://github.com/avasis-ai/arena-md#readme"
Repository = "https://github.com/avasis-ai/arena-md.git"
Issues = "https://github.com/avasis-ai/arena-md/issues"

[project.scripts]
arena-md = "arena_md.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/arena_md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
multi_line_output = 3
